[package]
name = "rsff"
version = "1.0.0"
edition = "2021"
description = "Core library of an application designed to facilitate the work of teams translating content such as manga, manhwa, manhua, webtoons, etc."
authors = ["NandeMD"]
readme = "README.md"
repository = "https://github.com/NandeMD/rsff"
license-file = "LICENSE"
keywords = ["scanlation", "file", "webtoon", "manga", "manhwa"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
flate2 = "1.0.28"
image = "0.24.7"
roxmltree = "0.18.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "balloon_benches"
harness = false

[[bench]]
name = "document_benches"
harness = false
